feat: agregar soporte para generadores de builders extensibles